# rust-web-hw

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  init-project.sh
.devcontainer/: Dockerfile  devcontainer.json
migrations/2024-02-18-183855_create_commissions/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/templates/: index.html
static/css/: style.css
templates/: index.html.hbs
